[MODGOBI-231] Fix sonar issues