@@ -1,11 +1,11 @@
 package org.folio.rest.core;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.gobi.exceptions.ErrorCodes.GENERIC_ERROR_CODE;
 
 import java.util.Collections;
 import java.util.List;
 
+import org.apache.commons.collections4.CollectionUtils;
 import org.folio.gobi.exceptions.HttpException;
 import org.folio.rest.jaxrs.model.Error;
 import org.folio.rest.jaxrs.model.Errors;
@@ -20,24 +20,10 @@ public class ExceptionUtil {
   private static final String ERROR_CAUSE = "cause";
 
   public static Errors convertToErrors(Throwable throwable) {
-    final Throwable cause = throwable.getCause() == null ? throwable : throwable.getCause();
-    Errors errors;
-
-    if (cause instanceof HttpException) {
-      errors = ((HttpException) cause).getErrors();
-      List<Error> errorList = errors.getErrors()
-        .stream()
-        .map(ExceptionUtil::getError)
-        .collect(toList());
-
-      errors.setErrors(errorList);
-      errors.setTotalRecords(errorList.size());
-    } else {
-      errors = new Errors().withErrors(Collections.singletonList(GENERIC_ERROR_CODE.toError()
-          .withAdditionalProperty(ERROR_CAUSE, cause.getMessage())))
-        .withTotalRecords(1);
-    }
-    return errors;
+    var cause = throwable.getCause() == null ? throwable : throwable.getCause();
+    return cause instanceof HttpException httpException
+      ? getErrors(httpException.getErrors().getErrors())
+      : getErrors(List.of(GENERIC_ERROR_CODE.toError().withAdditionalProperty(ERROR_CAUSE, cause.getMessage())));
   }
 
   public static HttpException getHttpException(int statusCode, String error) {
@@ -45,6 +31,15 @@ public class ExceptionUtil {
       return new HttpException(statusCode,  new JsonObject(error).mapTo(Errors.class));
     }
     return new HttpException(statusCode, error);
+  }
+
+  private static Errors getErrors(List<Error> errors) {
+    if (CollectionUtils.isEmpty(errors)) {
+      return new Errors().withErrors(Collections.emptyList()).withTotalRecords(0);
+    }
+    return new Errors()
+      .withErrors(errors.stream().map(ExceptionUtil::getError).toList())
+      .withTotalRecords(errors.size());
   }
 
   private static Error getError(Error error) {
